automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -78,7 +78,7 @@
    },
    "outputs": [],
    "source": [
-    "travel_month # \"January\""
+    "travel_month = \"January\"# \"January\""
    ]
   },
   {
@@ -107,7 +107,7 @@
    },
    "outputs": [],
    "source": [
-    "number_of_weeks # 3"
+    "number_of_weeks = 3# 3"
    ]
   },
   {
@@ -125,7 +125,7 @@
    },
    "outputs": [],
    "source": [
-    "number_of_weeks # 5"
+    "number_of_weeks = 5# 5"
    ]
   },
   {
@@ -152,21 +152,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
